Bug 718100 - 'Web workers should GC more'. r=mrbkap, a=keybl.